@@ -1,6 +1,7 @@
 Revision history for Perl extension Win32::Setupsup.
 
 1.03  NOT
+	- use Win32API::Registry instead of Win32::Registry
 	- use XSLoader instead of DynaLoader
 
 
